Horizontal Scrolling fixed for bookShelf header

--- a/client/default/css/styles.css
+++ b/client/default/css/styles.css
@@ -1315,15 +1315,18 @@ li {
   font: normal 12px "Avenir Next Medium", Helvetica, Arial, sans-serif;
 }
 #cabinet #cabinetHeader {
-  border-bottom: 1px solid #000000;
-  box-shadow: 0 5px 20px #cbcbcb;
+  border-bottom: 3px solid #000000;
   width: 100%;
-  padding-bottom: 20px;
+  float: left;
+  position: relative;
   overflow: auto;
 }
 #cabinet #cabinetHeader #scroller {
-  padding-bottom: 10px;
+  padding-bottom: 30px;
   white-space: nowrap;
+  width: auto;
+  float: left;
+  position: relative;
 }
 #cabinet #cabinetHeader .cabinetFolder {
   display: inline-block;
@@ -1360,11 +1363,20 @@ li {
   padding-bottom: 20px;
   width: 100%;
   background: url('../img/library/section.png');
+  background-attachment: scroll;
   background-position: 0px 25px;
   margin-bottom: 50px;
   min-height: 200px;
+  max-height: 280px;
+  overflow: hidden;
   border-bottom-left-radius: 8px;
   border-bottom-right-radius: 8px;
+}
+#cabinet #cabinetBody #bodyScroller {
+  background: url('../img/library/section.png');
+  background-attachment: scroll;
+  background-position: 0px 0px;
+  padding-bottom: 20px;
 }
 #cabinet #cabinetBody .cabinetItem {
   display: inline-block;
@@ -1375,7 +1387,7 @@ li {
   padding: 10px;
   border-radius: 5px;
   text-align: center;
-  margin-bottom: 55px;
+  margin-bottom: 49px;
 }
 #cabinet #cabinetBody .cabinetItem .thumbnail {
   height: 100px;
