--- a/client/default/less/pages/library.less
+++ b/client/default/less/pages/library.less
@@ -6,15 +6,19 @@
 	.avenir-medium(12px);
 
 	#cabinetHeader {
-		border-bottom: 1px solid #000000;
-		box-shadow: 0 5px 20px #cbcbcb;
+		border-bottom: 3px solid #000000;
+		// box-shadow: 0 5px 20px #cbcbcb;
 		width: 100%;
-		padding-bottom: 20px;
+		float: left;
+		position: relative;
 		overflow: auto;
 
 		#scroller {
-			padding-bottom: 10px;
+			padding-bottom: 30px;
 			white-space: nowrap;
+			width: auto;
+			float: left;
+			position: relative;
 		}
 
 		.cabinetFolder {
@@ -58,11 +62,21 @@
 		padding-bottom: 20px;
 		width: 100%;
 		background: url('../img/library/section.png');
+		background-attachment: scroll;
 		background-position: 0px 25px;
 		margin-bottom: 50px;
 		min-height: 200px;
+		max-height: 280px;
+		overflow: hidden;
 		border-bottom-left-radius: 8px;
 		border-bottom-right-radius: 8px;
+
+		#bodyScroller {
+			background: url('../img/library/section.png');
+			background-attachment: scroll;
+			background-position: 0px 0px;
+			padding-bottom: 20px;
+		}
 
 		.cabinetItem {
 			display: inline-block;
@@ -73,7 +87,7 @@
 			padding: 10px;
 			border-radius: 5px;
 			text-align: center;
-			margin-bottom: 55px;
+			margin-bottom: 49px;
 
 			.thumbnail {
 				height: 100px;
